--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"start": "webpack serve --env port=3000",
 		"build:prod": "webpack  --env mode=production",
 		"build:dev": "webpack  --env mode=development",
-		"lint:fix": "npx eslint --fix ."
+		"lint:fix": "npx eslint --fix .",
+		"lint:scss": "npx stylelint \"**/*.scss\"",
+		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
 	},
 	"keywords": [],
 	"author": "",
@@ -32,6 +34,8 @@
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
+		"stylelint": "^15.7.0",
+		"stylelint-config-standard-scss": "^9.0.0",
 		"ts-loader": "^9.2.6",
 		"ts-node": "^10.5.0",
 		"typescript": "^4.5.5",
