--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
 		"build:dev": "webpack  --env mode=development",
 		"lint:fix": "npx eslint --fix .",
 		"lint:scss": "npx stylelint \"**/*.scss\"",
-		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
+		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+		"unit": "jest --config ./config/jest/jest.config.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/preset-typescript": "^7.22.5",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+		"@types/jest": "^29.5.2",
 		"@types/node": "^17.0.21",
 		"@types/react": "^17.0.39",
 		"@types/react-dom": "^17.0.11",
@@ -29,6 +32,8 @@
 		"eslint-plugin-react": "^7.32.2",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
+		"jest": "^29.5.0",
+		"jest-environment-jsdom": "^29.5.0",
 		"mini-css-extract-plugin": "^2.5.3",
 		"react-refresh": "^0.14.0",
 		"sass": "^1.49.9",
